<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Karaoke.PLAY</string>
    <string name="app_version">버전</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 서버목록 -->
    <string name="KYS">KYS</string>
    <string name="KYM">KYM</string>
    <string name="CYW">CYW</string>
    <string name="KYG">KYG</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="pitch_test_1">음정테스트1</string>
    <string name="pitch_test_2">음정테스트2</string>
    <string name="choir_test_1">합창테스트1</string>
    <string name="choir_test_2">합창테스트2</string>
    <string name="full_screen_enable">전체화면</string>
    <string name="full_screen_unable">일반화면</string>

</resources>