<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always" />
    <item
        android:id="@+id/pitch_test_1"
        android:title="@string/pitch_test_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/pitch_test_2"
        android:title="@string/pitch_test_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/choir_test_1"
        android:title="@string/choir_test_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/choir_test_2"
        android:title="@string/choir_test_2"
        app:showAsAction="never" />

    <item
        android:id="@+id/full_screen"
        android:title="@string/full_screen_enable"
        app:showAsAction="never" />


    <!--<item-->
    <!--android:id="@+id/full_screen_enable"-->
    <!--android:title="@string/full_screen_enable"-->
    <!--app:showAsAction="never" />-->


    <!--<item-->
    <!--android:id="@+id/full_screen_unable"-->
    <!--android:title="@string/full_screen_unable"-->
    <!--app:showAsAction="never" />-->

</menu>