<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription,HardcodedText" >

    <LinearLayout
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="?android:attr/actionBarSize" >

        <EditText
            android:id="@+id/editSong"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:text="79325" />

        <CheckBox
            android:id="@+id/checkKYmedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KYGroup"
            android:visibility="gone" />

        <kr.kymedia.karaoke.view.EnabledRadioGroup
            android:id="@+id/radioPlayType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TYP:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioPlayTypeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"
                android:text="AUDIO"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/radioPlayTypeM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="true"
                android:text="MEDIA"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioPlayTypeS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="true"
                android:text="SOUND"
                android:textSize="14sp"
                android:textStyle="bold" />
        </kr.kymedia.karaoke.view.EnabledRadioGroup>

        <kr.kymedia.karaoke.view.EnabledRadioGroup
            android:id="@+id/radioServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SVR:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioServerKYS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="true"
                android:text="@string/KYS"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioServerKYM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="true"
                android:text="@string/KYM"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioServerCYW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="true"
                android:text="@string/CYW"
                android:textSize="14sp"
                android:textStyle="bold" />
        </kr.kymedia.karaoke.view.EnabledRadioGroup>

        <Button
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="open" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_setting_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:text="버전:DEBUG:99.99(99-1.00)-yyyy/MM/dd HH:mm"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>